--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,8 @@
         "mpu6050.h": "c",
         "math.h": "c",
         "corecrt_math.h": "c",
-        "corecrt.h": "c"
+        "corecrt.h": "c",
+        "i2c_mpu6050.h": "c"
     },
     "files.encoding": "gb2312"
 }
