--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,8 @@
         "math.h": "c",
         "corecrt_math.h": "c",
         "corecrt.h": "c",
-        "i2c_mpu6050.h": "c"
+        "i2c_mpu6050.h": "c",
+        "stm32f10x_dma.h": "c"
     },
     "files.encoding": "gb2312"
 }
